k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nexvion-deployment
  namespace: nexvion

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nexvion

  template:
    metadata:
      labels:
        app: nexvion

    spec:
      containers:
        - name: nexvion
          image: abuwa4real/nexvion:8

          ports:
            - containerPort: 80
