k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nexvion-service
  namespace: nexvion

spec:
  selector:
    app: nexvion

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
